# rbuilder

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  REORG_LOSSES.md  SECURITY.md  config-backtest-example.toml  config-live-example.toml  config-optimism-local.toml  config-playground.toml  entrypoint.sh  main.rs  rbuilder.toml  run_bench_state_root.sh  run_state_root_bench.sh  rustfmt.toml  zepter.yaml
.github/: CODEOWNERS  dependabot.yaml  (+1 more)
crates/op-rbuilder/: Cargo.toml
crates/op-rbuilder/node/: Cargo.toml
crates/op-rbuilder/node/src/: args.rs  lib.rs  node.rs
crates/op-rbuilder/payload_builder/: Cargo.toml
crates/op-rbuilder/payload_builder/src/: builder.rs  lib.rs
crates/op-rbuilder/src/: eth_bundle_api.rs  main.rs  node.rs
crates/op-rbuilder/src/node/: Cargo.toml
crates/op-rbuilder/src/node/src/: node.rs
crates/op-rbuilder/src/payload_builder/: Cargo.toml
crates/op-rbuilder/src/payload_builder/src/: builder.rs  lib.rs
crates/rbuilder/: Cargo.toml  build.rs
crates/rbuilder/benches/: bench_flamegraphs.rs  bench_main.rs
crates/rbuilder/benches/benchmarks/: mev_boost.rs  mod.rs  txpool_fetcher.rs
crates/rbuilder/benches/blob_data/: blob1.txt
crates/rbuilder/src/: lib.rs  validation_api_client.rs
crates/rbuilder/src/backtest/: backtest_build_block.rs  backtest_build_range.rs  backtest_synthetic_bundles.rs  config.rs  execute.rs  mod.rs  results_store.rs  store.rs  utils.rs
crates/rbuilder/src/backtest/fetch/: csv.rs  data_source.rs  datasource.rs  flashbots_db.rs  mempool.rs  mev_boost.rs  mod.rs
crates/rbuilder/src/backtest/generator/: conflict_generator.rs  mod.rs  solidity_bindings.rs  transaction_generator.rs  tx-gen-block.rs
crates/rbuilder/src/backtest/redistribute/: mod.rs  redistribution_algo.rs
crates/rbuilder/src/backtest/redistribute/cli/: csv_output.rs  mod.rs
crates/rbuilder/src/backtest/restore_landed_bundles/: find_landed_orders.rs  mod.rs  resim_landed_block.rs
crates/rbuilder/src/backtest/restore_landed_orders/: find_landed_orders.rs  mod.rs  resim_landed_block.rs
crates/rbuilder/src/beacon_api_client/: mod.rs
crates/rbuilder/src/building/: built_block_trace.rs  conflict.rs  evm_inspector.rs  fmt.rs  mod.rs  order_commit.rs  payout_tx.rs  revmc_ext_ctx.rs  sim.rs  tracers.rs
crates/rbuilder/src/building/block_orders/: mod.rs  multi_share_bundle_merger.rs  order_dumper.rs  prioritized_order_store.rs  share_bundle_merger.rs  test_context.rs  test_data_generator.rs
crates/rbuilder/src/building/builders/: block_building_helper.rs  bob_builder.rs  mock_block_building_helper.rs  mod.rs  ordering_builder.rs  unsealed_block.rs
crates/rbuilder/src/building/builders/merging_builder/: combinator.rs  groups.rs  merger.rs  merging_pool.rs  mod.rs  order_intake_store.rs
crates/rbuilder/src/building/builders/parallel_builder/: block_building_result_assembler.rs  conflict_resolvers.rs  conflict_resolving_pool.rs  conflict_task_generator.rs  groups.rs  mod.rs  order_intake_store.rs  readme.md  results_aggregator.rs  simulation_cache.rs  task.rs
crates/rbuilder/src/building/testing/: contracts.json  mod.rs  test_chain_state.rs
crates/rbuilder/src/building/testing/bundle_tests/: mod.rs  setup.rs
crates/rbuilder/src/building/testing/evm_inspector_tests/: mod.rs  setup.rs
crates/rbuilder/src/flashbots/: blocks_processor.rs  mod.rs
crates/rbuilder/src/integration/: config.rs  integration.rs  mod.rs  playground.rs  simple.rs
crates/rbuilder/src/live_builder/: base_config.rs  cli.rs  config.rs  mod.rs  watchdog.rs
crates/rbuilder/src/live_builder/bidding/: mod.rs  private_bid.rs
crates/rbuilder/src/live_builder/block_output/: bid_observer.rs  block_finisher.rs  block_finisher_factory.rs  block_router.rs  block_sealing_bidder_factory.rs  mod.rs  relay_submit.rs
crates/rbuilder/src/live_builder/block_output/bid_value_source/: best_bid_sync_source.rs  interfaces.rs  mod.rs  null_bid_value_source.rs
crates/rbuilder/src/live_builder/block_output/bidding/: interfaces.rs  mod.rs  parallel_sealer_bid_maker.rs  sequential_sealer_bid_maker.rs  true_block_value_bidder.rs  wallet_balance_watcher.rs
crates/rbuilder/src/live_builder/building/: mod.rs  relay_submit.rs
crates/rbuilder/src/live_builder/order_input/: bob_order_shim.rs  clean_orderpool.rs  mod.rs  order_replacement_manager.rs  order_sink.rs  orderpool.rs  replaceable_order_sink.rs  rpc_server.rs  txpool_fetcher.rs
crates/rbuilder/src/live_builder/payload_events/: mod.rs  payload_source.rs  relay_epoch_cache.rs
crates/rbuilder/src/live_builder/simulation/: mod.rs  sim_worker.rs  simulation_job.rs
crates/rbuilder/src/live_builder/streaming/: block_subscription_server.rs  mod.rs
crates/rbuilder/src/mev_boost/: error.rs  fake_mev_boost_relay.rs  mod.rs  rpc.rs  sign_payload.rs
crates/rbuilder/src/primitives/: fmt.rs  mev_boost.rs  mod.rs  order_builder.rs  serialize.rs  test_data_generator.rs
crates/rbuilder/src/privacy/: error_redactor.rs  mod.rs  relay.rs  validation.rs
crates/rbuilder/src/provider/: http_provider.rs  mod.rs
crates/rbuilder/src/roothash/: mod.rs  prefetcher.rs
crates/rbuilder/src/telemetry/: dynamic_logs.rs  metrics.rs  mod.rs
crates/rbuilder/src/telemetry/metrics_macros/: Cargo.toml
crates/rbuilder/src/telemetry/metrics_macros/src/: lib.rs
crates/rbuilder/src/telemetry/servers/: debug.rs  full.rs  mod.rs  opaque.rs  redacted.rs  restricted.rs
crates/rbuilder/src/test_utils/: Cargo.toml
crates/rbuilder/src/test_utils/src/: lib.rs
crates/rbuilder/src/utils/: build_info.rs  constants.rs  error_storage.rs  fmt.rs  mod.rs  noncer.rs  provider_factory_reopen.rs  reconnect.rs  test_data_generator.rs  test_utils.rs  tracing.rs  tx_signer.rs
crates/transaction-pool-bundle-ext/: Cargo.toml
crates/transaction-pool-bundle-ext/bundle_pool_ops/rbuilder/: Cargo.toml
crates/transaction-pool-bundle-ext/bundle_pool_ops/rbuilder/src/: lib.rs
crates/transaction-pool-bundle-ext/src/: bundle_pool_ops.rs  bundle_supported_pool.rs  lib.rs  traits.rs
(+26 files in other folders)
