[workspace]
members = [
    "crates/rbuilder",
    "crates/op-rbuilder",
    "crates/op-rbuilder/payload_builder",
    "crates/op-rbuilder/node",
    "crates/rbuilder/src/test_utils",
    "crates/rbuilder/src/telemetry/metrics_macros",
    "crates/transaction-pool-bundle-ext",
    "crates/transaction-pool-bundle-ext/bundle_pool_ops/rbuilder"
]
resolver = "2"

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-auto-seal-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6", features = ["test-utils"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-evm-optimism = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-rpc-api-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-node-optimism = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }

# version is copied from reth  "v1.0.6" dependencies
revm = { version = "14.0.0", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
], default-features = false }
revm-inspectors = "0.6"
revm-primitives = { version = "9.0.0", features = [
    "std",
], default-features = false }

ethereum_ssz_derive = "0.7"
ethereum_ssz = "0.7"

alloy-primitives = { version = "0.8.0", default-features = false }
alloy-rlp = "0.3.4"
alloy-chains = "0.1.23"
alloy-provider = { version = "0.3.0", features = ["ipc", "pubsub"] }
alloy-pubsub = { version = "0.3.0" }
alloy-eips = { version = "0.3.6" }
alloy-rpc-types = { version = "0.3.0" }
alloy-json-rpc = { version = "0.3.0" }
alloy-transport-http = { version = "0.3.0" }
alloy-network = { version = "0.3.0" }
alloy-transport = { version = "0.3.0" }
alloy-node-bindings = { version = "0.3.0" }
alloy-consensus = { version = "0.3.0", features = ["kzg"] }
alloy-serde = { version = "0.3.0" }
alloy-rpc-types-beacon = { version = "0.3.6", features = [
    "ssz",
] }
alloy-rpc-types-engine = { version = "0.3.0", features = [
    "ssz",
] }
alloy-rpc-types-eth = { version = "0.3.0" }
alloy-signer-local = { version = "0.3.0" }
alloy-genesis = { version = "0.3.0" }

async-trait = { version = "0.1.83" }
clap = { version = "4.4.3" }
thiserror = { version = "1.0.64" }
eyre = { version = "0.6.12" }
tracing = { version = "0.1.37" }
jsonrpsee = { version = "0.24.4" }
jsonrpsee-types = { version = "0.24.4" }
parking_lot = { version = "0.12.3" }
tokio = { version = "1.40.0" }
auto_impl = { version = "1.2.0" }
reqwest = { version = "0.12.8" }
serde = { version = "1.0.210" }
serde_json = { version = "1.0.128" }
clap_builder = { version = "4.5.19" }
derive_more = { version = "1" }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
url = "2.5.2"


