[package]
name = "op-rbuilder"
version = "0.1.0-alpha.0"
edition = "2021"

[dependencies]
reth.workspace = true
reth-rpc.workspace = true
reth-rpc-types.workspace = true
reth-rpc-api.workspace = true
reth-rpc-server-types.workspace = true
reth-node-builder.workspace = true
reth-beacon-consensus.workspace = true
reth-blockchain-tree.workspace = true
reth-node-core.workspace = true
reth-node-optimism.workspace = true
reth-node-metrics.workspace = true
reth-cli-util.workspace = true
reth-cli-commands.workspace = true
reth-optimism-cli.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-optimism-rpc.workspace = true

tracing.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
jsonrpsee = { workspace = true }
jsonrpsee-types = { workspace = true }
async-trait = { workspace = true }

# this dep had a breaking patch bump, so we need to pin it
op-alloy-rpc-types = "=0.2.2"

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.5.0", optional = true }
libc = "0.2"

[dev-dependencies]
reth-discv4.workspace = true

[features]
default = ["jemalloc"]

dev = ["reth-cli-commands/dev"]

asm-keccak = ["reth-node-core/asm-keccak", "reth-primitives/asm-keccak"]

jemalloc = ["dep:tikv-jemallocator", "reth-node-core/jemalloc", "reth-node-metrics/jemalloc"]
jemalloc-prof = ["jemalloc", "tikv-jemallocator?/profiling"]

min-error-logs = ["tracing/release_max_level_error"]
min-warn-logs = ["tracing/release_max_level_warn"]
min-info-logs = ["tracing/release_max_level_info"]
min-debug-logs = ["tracing/release_max_level_debug"]
min-trace-logs = ["tracing/release_max_level_trace"]

optimism = [
    "reth-beacon-consensus/optimism",
    "reth-blockchain-tree/optimism",
    "reth-node-core/optimism",
    "reth-node-optimism/optimism",
    "reth-optimism-cli/optimism",
    "reth-primitives/optimism",
    "reth-provider/optimism",
    "reth-rpc/optimism",
]

[[bin]]
name = "op-rbuilder"
path = "src/main.rs"
