[package]
name = "op-rbuilder-payload-builder"
version = "0.1.0-alpha.0"
edition = "2021"
description = "A payload builder for op-rbuilder with bundle support."

[dependencies]
# workspace
transaction-pool-bundle-ext = { path = "../../transaction-pool-bundle-ext" }

# reth
reth-chainspec.workspace = true
reth-primitives.workspace = true
reth-revm.workspace = true
reth-transaction-pool.workspace = true
reth-provider.workspace = true
reth-evm.workspace = true
reth-evm-optimism.workspace = true
reth-node-optimism.workspace = true
reth-execution-types.workspace = true
reth-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-trie.workspace = true
reth-chain-state.workspace = true
reth-optimism-payload-builder.workspace = true

# ethereum
revm.workspace = true

# misc
tracing.workspace = true

[features]
optimism = [
    "reth-chainspec/optimism",
    "reth-primitives/optimism",
    "reth-provider/optimism",
    "reth-node-optimism/optimism",
    "reth-evm-optimism/optimism",
    "reth-revm/optimism",
]
